[fix] modal, nav z-index 수정

--- a/src/common/Modal/MovieModal.css
+++ b/src/common/Modal/MovieModal.css
@@ -5,10 +5,9 @@
     max-width: 100%;
     width: 100% !important;
     height: 100%;
-
-
     margin: 0;
     background-color: rgba(0, 0, 0, 0.192);
+    z-index: 999;
 }
 
 .modal-content{
